# memory

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  config-bge-small.toml  config.toml  config.toml.example  md5_test.md  package-lock.json  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: pretooluse.bash.sh
.claude/skills/my-memory/: SKILL.md  my-memory.sh
docs/: architecture.md  examples.md  llamaindex_integration_report.md  markdown分块chunk优化方案.md  repository-usage.md
docs/history/: 2026-02-28_00:06_test_recall_framework.md  2026-03-01_21-26_ollama_embedding_support.md  2026-03-03_00-29_markdown-chunk-optimization.md  2026-03-07_12-40_sync-command.md
docs/reports/: docling_integration_report.md  llamaindex_integration_report.md  model-comparison-report.md  recall-accuracy-research.md
eval/: results.json  results_embending_only.json  results_hybird.json  test_data.json
eval/test_docs/: Claude Code Remote Control 远程控制教程.md  Claude code 2.1.39 - 2.1.51 变更记录.md  cooking-hongshaorou.md  fitness-strength-training.md  python-async-programming.md  reading-notes-design-patterns.md  setup_enverioment.md
hooks/: post-merge  post-push  pre-commit
obsidian-plugin/: main.ts  package-lock.json  package.json  tsconfig.json
openspec/changes/add-document-type-filter/: design.md  proposal.md  tasks.md
openspec/changes/add-ingestion-progress/: design.md  tasks.md
src/memory/: __init__.py
test_docs/: finance-stock-basics.md  javascript-es6-features.md  python-type-hints.md  travel-japan-guide.md
tests/: __init__.py  compare_embeddings.py  compare_models.py  model_comparison.py
tests/integration/: __init__.py  test_end_to_end_workflow.py  test_local_provider_chroma_integration.py  test_openai_provider_chroma_integration.py  test_recall.py
tests/unit/: __init__.py  test_chroma_store.py  test_chunking.py  test_doc_commands.py  test_local_provider.py  test_markdown_chunking.py  test_memory_store.py  test_models.py  test_openai_provider.py  test_repo_commands.py  test_repository_manager.py  test_sqlite_store.py  test_tree_sitter_chunking.py
(+102 files in other folders)
