[project]
name = "memory"
version = "0.1.0"
description = "Personal knowledge base system with semantic search and LLM-based QA"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "structlog>=23.0.0",
  "python-dotenv>=1.0.0",
  "aiosqlite>=0.22.1",
  "httpx[socks]>=0.28.1",
]

[project.optional-dependencies]
# Embedding providers
openai = ["openai>=1.0.0"]
local = ["sentence-transformers>=2.2.0"]

# Vector stores
chroma = ["chromadb>=0.4.0"]
qdrant = ["qdrant-client>=1.7.0"]
faiss = ["faiss-cpu>=1.7.0"]

# Document processing
pdf = ["pypdf>=3.0.0", "pdfplumber>=0.10.0"]
web = ["beautifulsoup4>=4.12.0", "requests>=2.31.0"]

# Advanced chunking
tree-sitter = ["tree-sitter>=0.23.0", "tree-sitter-markdown>=0.4.0"]

# Development
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "mypy>=1.5.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
]

[project.scripts]
memory = "memory.interfaces.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "mypy>=1.5.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
]

[tool.black]
line-length = 180
target-version = ["py311"]

[tool.ruff]
line-length = 180
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
